send UI to figma content

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "font-awesome-plugin",
-	"id": "1",
-	"api": "1.0.0",
-	"main": "dist/code.js",
-	"ui": "dist/ui.html"
+    "name": "Font Awesome Icons",
+    "id": "774202616885508874",
+    "api": "1.0.0",
+    "main": "dist/code.js",
+    "ui": "dist/ui.html"
 }
