--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "figma-font-awesome-plugin",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "src/code.js",
   "scripts": {
-    "dev": "NODE_ENV=development npx webpack --mode=production --watch",
-    "build": "NODE_ENV=production node tree.js && npx webpack --mode=production",
-    "tree": "node tree.js"
+    "dev": "NODE_ENV=development npx webpack --mode=development --watch",
+    "build": "NODE_ENV=production npx webpack --mode=production"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
