--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "classnames": "^2.3.1",
     "css-loader": "^3.1.0",
     "directory-tree": "^2.2.4",
+    "effector": "^22.1.2",
+    "effector-react": "^22.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
