feat: use effector

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "module": "es6",
-    "target": "es6",
+    "target": "ESNext",
     "jsx": "react",
     "sourceMap": true,
     "typeRoots": ["custom.d.ts"],
