--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "effector": "^22.1.2",
     "effector-react": "^22.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "figma-plugin-ds": "^1.0.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "ramda": "^0.27.1",
