--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "build": "NODE_ENV=production npx webpack --mode=production"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "classnames": "^2.3.1",
     "css-loader": "^3.1.0",
-    "effector": "^22.1.2",
+    "effector": "^22.3.0",
     "effector-react": "^22.0.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "figma-plugin-ds": "^1.0.1",
@@ -27,16 +27,17 @@
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
-    "typescript": "^3.5.3",
+    "typescript": "4.5.4",
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "node-sass": "^4.14.1",
-    "prettier": "^1.18.2",
+    "prettier": "^2.7.1",
     "sass-loader": "^8.0.0",
     "webpack-dev-server": "^3.8.1"
   },
