--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-    "name": "figma-font-awesome-plugin",
-    "version": "1.0.0",
-    "main": "src/code.js",
-    "scripts": {
-        "start": "npx webpack --mode=production --watch",
-        "build": "node tree.js && npx webpack --mode=production",
-        "tree": "node tree.js"
-    },
-    "dependencies": {
-        "@types/react": "^16.8.23",
-        "@types/react-dom": "^16.8.5",
-        "classnames": "^2.2.6",
-        "css-loader": "^3.1.0",
-        "directory-tree": "^2.2.4",
-        "html-webpack-inline-source-plugin": "0.0.10",
-        "html-webpack-plugin": "^3.2.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "style-loader": "^0.23.1",
-        "ts-loader": "^6.0.4",
-        "typescript": "^3.5.3",
-        "url-loader": "^2.1.0",
-        "webpack": "^4.38.0",
-        "webpack-cli": "^3.3.6"
-    },
-    "devDependencies": {
-        "@types/react": "^16.9.2",
-        "@types/react-dom": "^16.9.0",
-        "node-sass": "^4.14.1",
-        "prettier": "^1.18.2",
-        "sass-loader": "^8.0.0",
-        "webpack-dev-server": "^3.8.1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+  "name": "figma-font-awesome-plugin",
+  "version": "2.0.0",
+  "main": "src/code.js",
+  "scripts": {
+    "dev": "NODE_ENV=development npx webpack --mode=development --watch",
+    "build": "NODE_ENV=production npx webpack --mode=production"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "classnames": "^2.3.1",
+    "css-loader": "^3.1.0",
+    "effector": "^22.1.2",
+    "effector-react": "^22.0.6",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "figma-plugin-ds": "^1.0.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "^3.2.0",
+    "ramda": "^0.27.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^1.18.2",
+    "sass-loader": "^8.0.0",
+    "webpack-dev-server": "^3.8.1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
